--- a/style.css
+++ b/style.css
@@ -91,11 +91,12 @@ button:focus{
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 #logoText{
   position: absolute;
   color: var(--redTheme);
-  font-size: 64px;
+  font-size: 48px;
   text-align: center;
   text-shadow: rgb(0, 0, 0) 7px 0px 0px, rgb(0, 0, 0) 6.92869px 0.996602px 0px,
     rgb(0, 0, 0) 6.71622px 1.9729px 0px, rgb(0, 0, 0) 6.36692px 2.909px 0px,
@@ -197,6 +198,34 @@ button:focus{
   opacity: 0.5;
 }
 
+.star {
+  opacity: 0;
+  background: var(--buttonBg);
+  width: 5px;
+  height: 5px;
+  position: absolute;
+  text-align: center;
+  transform: rotate(20deg);
+}
+.star:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 5px;
+  width: 5px;
+  background: var(--buttonBg);
+  transform: rotate(135deg);
+}
+
+@keyframes star{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
 
 
 #difficulty {
@@ -240,13 +269,21 @@ button:focus{
   border: 1px solid black;
   margin: 0 auto;
   overflow: hidden;
-  background-color: #e0e2ff;
+  /* background: linear-gradient(0deg, rgba(242,242,255,1) 0%, rgba(199,199,255,1) 100%); */
   position: relative;
-  animation: sky 60s 10s linear infinite alternate, fadeIn 0.5s ease forwards;
+  
 
   animation-delay: sky 10s;
 }
 
+#bg{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(242,242,255,1) 0%, rgba(199,199,255,1) 100%);
+  animation: sky 60s 10s linear infinite alternate, fadeIn 0.5s ease forwards;
+
+}
 #score {
   position: absolute;
   width: 100%;
@@ -289,7 +326,7 @@ button:focus{
     rgb(0, 0, 0) 6.93119px -0.979076px 0px;
   font-size: 42px;
   padding: 12px;
-  z-index: 6;
+  z-index: 15;
 }
 
 #topBlock {
@@ -300,7 +337,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='21' height='22' viewBox=
   
   position: absolute;
   animation: block 2s infinite linear;
-  z-index: 5;
+  z-index: 8;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
 }
@@ -313,7 +350,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='21' height='22' viewBox=
   position: absolute;
   bottom: 0;
   animation: block 2s infinite linear;
-  z-index: 5;
+  z-index: 8;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
 }
@@ -334,7 +371,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='21' height='22' viewBox=
   position: absolute;
   top: 100px;
   left: 5%;
-  z-index: 5;
+  z-index: 8;
   transition: transform 0.3s;
 }
 
@@ -399,14 +436,14 @@ background-image: url("data:image/svg+xml,%3Csvg width='21' height='22' viewBox=
   width: 2400px;
   height: 2400px;
   background-image: url(./images/earthblack.png);
-  background-position: center;
+  background-position: left;
   background-size: cover;
   position: relative;
-  top: 90%;
-  margin-left: -1000px;
+  top: 85%;
+  /* margin-left: -800px; */
   /* background-color: #002b00; */
   border-radius: 50%;
-  animation: earth 120s linear infinite;
+  animation: earth 150s linear infinite;
 }
 
 #tower {
@@ -471,12 +508,19 @@ background-image: url("data:image/svg+xml,%3Csvg width='21' height='22' viewBox=
 }
 
 @keyframes sky {
+
   from {
+    filter: brightness(100%);
+  }
+  to {
+    filter: brightness(5%);
+  }
+  /* from {
     background-color: #e0e2ff;
   }
   to {
     background-color: #00001d;
-  }
+  } */
 }
 
 @keyframes fadeIn {
