--- a/style.css
+++ b/style.css
@@ -269,21 +269,20 @@ button:focus{
   border: 1px solid black;
   margin: 0 auto;
   overflow: hidden;
-  /* background: linear-gradient(0deg, rgba(242,242,255,1) 0%, rgba(199,199,255,1) 100%); */
+  background-color: #e0e2ff;
   position: relative;
-  
-
+  animation: sky 60s 10s linear infinite alternate, fadeIn 0.5s ease forwards;
   animation-delay: sky 10s;
 }
 
-#bg{
+/* #bg{
   position: absolute;
   width: 100%;
   height: 100%;
   background: linear-gradient(0deg, rgba(242,242,255,1) 0%, rgba(199,199,255,1) 100%);
-  animation: sky 60s 10s linear infinite alternate, fadeIn 0.5s ease forwards;
+  
 
-}
+} */
 #score {
   position: absolute;
   width: 100%;
@@ -509,18 +508,18 @@ background-image: url("data:image/svg+xml,%3Csvg width='21' height='22' viewBox=
 
 @keyframes sky {
 
-  from {
+  /* from {
     filter: brightness(100%);
   }
   to {
     filter: brightness(5%);
-  }
-  /* from {
+  } */
+  from {
     background-color: #e0e2ff;
   }
   to {
     background-color: #00001d;
-  } */
+  }
 }
 
 @keyframes fadeIn {
